# flare-intro

./: NOTES.w32  README.md  TODO
cmake/: FindGLEW.cmake
data/shaders/: frag-boid.glsl  frag-fakewire.glsl  frag-textblur.glsl  frag-wiretri.glsl  vert-boid.glsl  vert-dummy.glsl  vert-fakewire.glsl  vert-wiretri.glsl
ggl/: CMakeLists.txt  framebuffer.cc  framebuffer.h  pixmap.cc  shader.cc  texture.cc  texture.h  vertex_array.h  window.cc  window.h
intro/: CMakeLists.txt  bezier.cc  bezier.h  boid.cc  boid.h  boids.cc  boids.h  bounding_box.cc  bounding_box.h  common.h  dragon.cc  dragon.h  frustum.cc  frustum.h  fx.h  main.cc  mesh.cc  mesh.h  ogg_player.cc  ogg_player.h  particle_texture.cc  particle_texture.h  program_manager.cc  program_manager.h  quadtree.cc  quadtree.h  scene.cc  scene.h  spectrum.cc  spectrum.h  text.cc  text.h  tube.cc  tube.h  util.cc  util.h  wirepoly.cc  wirepoly.h
scripts/: gen-images.sh
